# clock_dcf77

./: Cargo.toml  bmp.gdb  memory.x  openocd.cfg  openocd.gdb
.cargo/: config.toml
src/: datetime_converter.rs  dcf77_decoder.rs  main.rs  time_display.rs
