[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["Cristian Eigel <cristian.eigel@esrlabs.com>"]
name = "clock_dcf77"
edition = "2018"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.1"
cortex-m-rtic = "0.5.8"
panic-rtt-target = {version="0.1.2", features = ["cortex-m"] }
rtt-target = {version= "0.3.1",  features = ["cortex-m"] }
chrono = { version = "0.4.19", default-features = false }
rtcc = "0.2.1"
ht16k33 = { version = "0.4.0", default-features = false }
adafruit-7segment = { version = "0.1.0", default-features = false  }

[dependencies.feather-f405]
version = "0.2.0"
git = "https://github.com/jkristell/feather-f405.git"

[profile.dev]
debug=true
opt-level=0

[profile.dev.package."*"]
opt-level=0
debug = true # symbols are nice and they don't increase the size on Flash
